fix gap in project card 1

--- a/assets/css/style-768.css
+++ b/assets/css/style-768.css
@@ -75,7 +75,7 @@
 
   .project-card-1 {
     display: grid;
-    column-gap: 1em;
+    column-gap: 2em;
     grid-template-columns: 3fr 2fr;
     grid-template-areas:
       "img title"
